--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         </div>
     </footer>
 
+    <button id="scrollToTop" class="scroll-to-top" title="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <script src="assets/js/main.js"></script>
 </body>
 </html>
